--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -1,175 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+    <!--主页面-->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/ll_in_album_out">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#7adfb8"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/ll_in_album_out">
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#7adfb8"
+                android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/btn_return1"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/fanhui32" />
+                    android:layout_weight="1">
+
+                    <ImageButton
+                        android:id="@+id/btn_return1"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/fanhui32" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/album_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="8"
+                    android:gravity="center"
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:id="@+id/btn_search"
+                        android:layout_width="35dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/sousou" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <TextView
-                android:id="@+id/album_name"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="8"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:textSize="20dp" />
+                android:lines="1"
+                android:text="—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————-—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
+                android:textSize="5dp" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="2">
-
-                <TextView
-                    android:id="@+id/btn_search"
-                    android:layout_width="35dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/sousou" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="1"
-            android:text="—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————-—————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
-            android:textSize="5dp" />
-
-        <LinearLayout
-            android:id="@+id/tab_widget"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_weight="1.5"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/tab_spec_1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/img_1"
-                    android:layout_width="65dp"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="2dp"
-                    android:background="@drawable/xiang" />
-
-                <TextView
-                    android:id="@+id/tv_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="时间相册"
-                    android:textSize="17dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/tab_spec_2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/img_2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="2dp"
-                    android:background="@drawable/qiu" />
-
-                <TextView
-                    android:id="@+id/tv_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="足迹地球"
-                    android:textSize="17dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8">
-
-            <FrameLayout
-                android:id="@+id/tab_content"
+                android:id="@+id/tab_widget"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:layout_weight="1.5"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/tab_spec_1"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                    >
+                    <ImageView
+                        android:id="@+id/img_1"
+                        android:layout_width="65dp"
+                        android:layout_height="60dp"
+                        android:layout_marginBottom="2dp"
+                        android:background="@drawable/xiang" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="10"></LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1.7"
-                        android:gravity="right"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/add_img"
-                            android:layout_width="55dp"
-                            android:layout_height="55dp"
-                            android:layout_marginRight="20dp"
-                            android:background="@drawable/jiaohao" />
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="时间相册"
+                        android:textSize="17dp" />
                 </LinearLayout>
-            </FrameLayout>
-        </FrameLayout>
-    </LinearLayout>
-    <indi.liyi.viewer.ImageViewer
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/iver_show_img">
 
-    </indi.liyi.viewer.ImageViewer>
-</LinearLayout>
+                <LinearLayout
+                    android:id="@+id/tab_spec_2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/img_2"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginBottom="2dp"
+                        android:background="@drawable/qiu" />
+
+                    <TextView
+                        android:id="@+id/tv_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="足迹地球"
+                        android:textSize="17dp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="8">
+
+                <FrameLayout
+                    android:id="@+id/tab_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+
+                        >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="10"></LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1.7"
+                            android:gravity="right"
+                            android:orientation="horizontal">
+
+                            <ImageButton
+                                android:id="@+id/add_img"
+                                android:layout_width="55dp"
+                                android:layout_height="55dp"
+                                android:layout_marginRight="20dp"
+                                android:background="@drawable/jiaohao" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </FrameLayout>
+            </FrameLayout>
+        </LinearLayout>
+        <indi.liyi.viewer.ImageViewer
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/iver_show_img">
+
+        </indi.liyi.viewer.ImageViewer>
+    </LinearLayout>
+
+    <!--这里是弹出的抽屉布局-->
+    <LinearLayout
+        android:layout_width="160dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#fff"
+        android:fitsSystemWindows="true"
+        android:paddingTop="30dp">
+
+        <RelativeLayout
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="app.oradt.szm.com.mypage.MainActivity">
+
+            <ListView
+                android:id="@+id/list_time"
+                android:layout_width="match_parent"
+                android:cacheColorHint="@null"
+                android:divider="@null"
+                android:dividerHeight="0dp"
+                android:scrollbars="none"
+                android:listSelector="@android:color/transparent"
+                android:layout_height="match_parent" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
+
 
 
