--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -8,16 +7,15 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
     <!--主页面-->
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/ll_in_album_out"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/ll_in_album_out">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -173,13 +171,96 @@
                 </FrameLayout>
             </FrameLayout>
         </LinearLayout>
+
         <indi.liyi.viewer.ImageViewer
+            android:id="@+id/iver_show_img"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/iver_show_img">
+            android:layout_height="match_parent">
 
         </indi.liyi.viewer.ImageViewer>
-    </LinearLayout>
+
+        <!-- 修改的界面 -->
+        <RelativeLayout
+            android:id="@+id/rl_in_album_iver_show_edit_out"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="3dp"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="#fff"
+                android:elevation="3dp">
+
+                <ImageView
+                    android:id="@+id/iv_in_album_iver_show_edit_exit"
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:elevation="3dp"
+                    android:src="@drawable/left_exit" />
+
+                <TextView
+                    android:id="@+id/tv_in_album_iver_show_edit_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@id/iv_in_album_iver_show_edit_exit"
+                    android:elevation="3dp"
+                    android:gravity="center_vertical"
+                    android:text="2017年4月6日"
+                    android:textColor="#000"
+                    android:textSize="19sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:background="#fff"
+                android:elevation="3dp">
+
+                <ImageView
+                    android:id="@+id/iv_in_album_iver_show_edit_detail"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:elevation="3dp"
+                    android:src="@drawable/detail" />
+
+                <ImageView
+                    android:id="@+id/iv_in_album_iver_show_edit_delete"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:elevation="3dp"
+                    android:src="@drawable/delete" />
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <!-- 单展示展示的界面 -->
+        <RelativeLayout
+            android:id="@+id/rl_in_album_iver_show_out"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="3dp"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tv_in_album_mark_item_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="10dp"
+                android:elevation="3dp"
+                android:textColor="#fff"
+                android:textSize="15sp" />
+        </RelativeLayout>
+    </RelativeLayout>
 
     <!--这里是弹出的抽屉布局-->
     <LinearLayout
@@ -199,12 +280,12 @@
             <ListView
                 android:id="@+id/list_time"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:cacheColorHint="@null"
                 android:divider="@null"
                 android:dividerHeight="0dp"
-                android:scrollbars="none"
                 android:listSelector="@android:color/transparent"
-                android:layout_height="match_parent" />
+                android:scrollbars="none" />
         </RelativeLayout>
 
     </LinearLayout>
