--- a/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -19,10 +19,10 @@
             android:layout_width="320dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_edge"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/et_search"
@@ -101,5 +101,76 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></indi.liyi.viewer.ImageViewer>
 
+    <!-- 修改的界面 -->
+    <RelativeLayout
+        android:id="@+id/rl_search_iver_show_edit_out"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
-</LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#fff">
+
+            <ImageView
+                android:id="@+id/iv_search_iver_show_edit_exit"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/left_exit" />
+
+            <TextView
+                android:id="@+id/tv_search_iver_show_edit_time"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_toRightOf="@id/iv_search_iver_show_edit_exit"
+                android:gravity="center_vertical"
+                android:text="2017年4月6日"
+                android:textColor="#000"
+                android:textSize="19sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:background="#fff">
+
+            <ImageView
+                android:id="@+id/iv_search_iver_show_edit_detail"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/detail" />
+
+            <ImageView
+                android:id="@+id/iv_search_iver_show_edit_delete"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/delete" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <!-- 单展示展示的界面 -->
+    <RelativeLayout
+        android:id="@+id/rl_search_iver_show_out"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_search_mark_item_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:textColor="#fff"
+            android:textSize="15sp" />
+    </RelativeLayout>
+</RelativeLayout>
