--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -51,16 +51,16 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
                     android:layout_weight="2">
 
                     <TextView
-                        android:id="@+id/btn_search"
+                        android:id="@+id/btn_time"
                         android:layout_width="35dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:layout_marginRight="5dp"
-                        android:background="@drawable/sousou" />
+                        android:background="@drawable/time" />
                 </LinearLayout>
 
             </LinearLayout>
